--- a/clook code/trial.html
+++ b/clook code/trial.html
@@ -89,40 +89,12 @@
                                         </div>
                                     </div>
                                 </form>
-
-                                <!--Filter by NavBar Begin-->
-                                <!--<nav class="navbar navbar-default">
-                                    <div class="container trending">
-                                        <!--Brand and toggle get grouped for better mobile display 
-                                        <div class="navbar-header">
-                                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-                                                <span class="sr-only">Toggle navigation</span>
-                                                <span class="icon-bar"></span>
-                                                <span class="icon-bar"></span>
-                                                <span class="icon-bar"></span>
-                                            </button>
-                                        </div>
-                                        <!-- Collect the nav links, forms, and other content for toggling 
-                                        <div class="collapse navbar-collapse" id="navbar-collapse-1">
-                                            <ul class="nav navbar-nav trending-menu">
-                                                <li ><a class="week" href="#">TRENDING:</a></li>
-                                                <li><a href="http://rusty.com">KIM KARDASHIAN</a></li>
-                                                <li><a href="http://rusty.com">KELLY CLARKSON </a></li>
-                                                <li><a href="http://rusty.com">ESSA DUGGAR</a></li>
-                                                <li><a href="http://rusty.com">WIN IT</a></li>
-                                                <li><a class="week" href="http://rusty.com">SUBSCRIBE </a></li>
-                                            </ul>
-                                        </div><!-- end navbar-collapse 
-                                    </div><!-- end container
-                                </nav>
-                                <!--Filter by NavBar end-->
                             </div>
                         </div>
                     <!--Search and Filter Bar End-->
                 </div>
     
             </div>
-                <!--<a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
         </div>
             </div>
         </div>
@@ -131,8 +103,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Search Results</h2>
-                <!--<a href="trial.html" class="btn btn-default btn-xl sr-button">Try it Out!</a>-->
-                <!--Search Results Table-->
+                <!--Search Results Table (Still Hardcoded)-->
                 <table class="table table-inverse">
                 <thead>
                 <tr>
@@ -187,11 +158,6 @@
                     <p><a href="https://in.linkedin.com/in/ipshitachatterjee">Ipshita Chatterjee</a></p>
                     <p><a href="https://www.linkedin.com/in/namrata-mukhija-818b09112">Namrata Mukhija</a></p>
                 </div>
-                <!--<div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">chatterjeei08@gmail.com</a></p>
-                    <p><a href="mailto:your-email@your-domain.com">namratamukhija@gmail.com</a></p>
-                </div>-->
             </div>
         </div>
     </section>
